signup login flows added

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Clash Royale H2H Tracker"
+      content="ClashFriends - Track Head-to-Head Battles"
     />
-    <title>CR H2H Tracker</title>
+    <title>ClashFriends</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
